[gd_scene load_steps=10 format=2]

[ext_resource path="res://src/Fuzz.gd" type="Script" id=1]
[ext_resource path="res://Assets/Enemies/Fuzz/hurt_2.png" type="Texture" id=2]
[ext_resource path="res://Assets/Enemies/Fuzz/normal.png" type="Texture" id=3]
[ext_resource path="res://Assets/Enemies/Fuzz/killed.png" type="Texture" id=4]
[ext_resource path="res://Assets/Enemies/Fuzz/walk_1.png" type="Texture" id=5]
[ext_resource path="res://Assets/Enemies/Fuzz/attack.png" type="Texture" id=6]
[ext_resource path="res://Assets/Enemies/Fuzz/hurt_1.png" type="Texture" id=7]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 32.9534, 38.1228 )

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 3 ) ],
"loop": true,
"name": "default",
"speed": 1.0
}, {
"frames": [ ExtResource( 6 ) ],
"loop": true,
"name": "attack",
"speed": 0.5
}, {
"frames": [ ExtResource( 7 ) ],
"loop": true,
"name": "hurt",
"speed": 1.0
}, {
"frames": [ ExtResource( 3 ), ExtResource( 5 ) ],
"loop": true,
"name": "walk",
"speed": 2.0
}, {
"frames": [ ExtResource( 4 ) ],
"loop": true,
"name": "killed",
"speed": 0.5
}, {
"frames": [ ExtResource( 2 ) ],
"loop": true,
"name": "hurt 2",
"speed": 5.0
} ]

[node name="Fuzz" type="KinematicBody2D"]
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -3.75226, 0.33371 )
scale = Vector2( 0.9, 0.9 )
shape = SubResource( 1 )

[node name="WeaponPos" type="Position2D" parent="."]
position = Vector2( -18, 17.5 )

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( -3.5, 0.25 )
shape = SubResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 2 )
animation = "walk"
frame = 1
playing = true

[connection signal="area_entered" from="Area2D" to="." method="_on_Area2D_area_entered"]
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="animation_finished" from="AnimatedSprite" to="." method="_on_AnimatedSprite_animation_finished"]
